@@ -1,5 +1,5 @@
 #
-# "$Id: makeinclude.os2x,v 1.1.2.4.2.10.2.1 2003/11/02 01:37:44 easysw Exp $"
+# "$Id: makeinclude.os2x,v 1.1.2.4.2.10.2.2 2003/11/03 00:38:17 easysw Exp $"
 #
 # Make include file for the Fast Light Tool Kit (FLTK).
 #
@@ -40,7 +40,7 @@ HTMLDOC		= htmldoc.exe
 LN		= :
 MKDIR		= md
 NROFF		= nroff
-RM		= del
+RM		= if exist %1 del %1
 RMDIR		= rd
 STRIP		= :
 
@@ -73,8 +73,8 @@ GLDLIBS		= -s -Zmt -Zcrtdll -Zbsd-signals -lXext -lX11 -lsocket -lshm
 LINKFLTK	= ../lib/libfltk.a
 LINKFLTKGL	= -L../lib 
 LINKFLTKFORMS	= ../lib/libfltk_forms.a ../lib/libfltk.a
-LINKFLTKIMG	= ../lib/libfltk_images.a ../lib/libfltk.a
 IMAGELIBS	= -lpng -ljpeg -lz
+LINKFLTKIMG	= ../lib/libfltk_images.a $(IMAGELIBS) ../lib/libfltk.a
 
 # Do we build the OpenGL demos?
 GLDEMOS		=
@@ -86,7 +86,7 @@ THREADS		=
 EXEEXT		=.exe
 
 # Possible steps after linking...
-POSTBUILD	=:
+POSTBUILD	= touch
 
 # Man page extensions...
 CAT1EXT		=1
@@ -124,5 +124,5 @@ CAT3EXT		=3
 	mv t.z $@
 
 #
-# End of "$Id: makeinclude.os2x,v 1.1.2.4.2.10.2.1 2003/11/02 01:37:44 easysw Exp $".
+# End of "$Id: makeinclude.os2x,v 1.1.2.4.2.10.2.2 2003/11/03 00:38:17 easysw Exp $".
 #
