@@ -3,7 +3,8 @@ CHANGES IN FLTK 1.1.5rc1
 	- The keypad Enter key works as the normal Enter/Return
 	  key in common widgets (STR #191)
 	- Doco fixes (STR #186)
-	- Fixed some OS/2-specific build problems (STR #185)
+	- Fixed some OS/2-specific build problems (STR #185 and
+	  #197)
 	- Calling Fl_Text_Display::buffer() with the same buffer
 	  would cause an application to lockup (STR #196)
 	- Some of the widgets could crash an application if the
